[package]
name = "boatramp-island"
version = "0.1.0"
edition = "2021"
description = "Dioxus CSR island: the interactive quickstart terminal, copy buttons, and live GitHub star count for boatramp.dev."
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
dioxus = { version = "0.6", features = ["web"] }
dioxus-web = "0.6"

# Pinned to match the nix-provided wasm-bindgen-cli (see flake.nix), so the
# generated bindings and the CLI never version-skew.
wasm-bindgen = "=0.2.121"
wasm-bindgen-futures = "0.4"

# Ergonomic browser glue (thin wrappers over web-sys).
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-events = "0.2"
gloo-utils = "0.2"
gloo-net = { version = "0.6", default-features = false, features = ["http", "json"] }

serde = { version = "1", features = ["derive"] }

[dependencies.web-sys]
version = "0.3"
features = ["Window", "Document", "Node", "Element", "HtmlElement", "EventTarget", "Navigator", "Clipboard", "MediaQueryList"]
